calico_versioned_docs/version-3.27/_includes/content/_entityrule.mdx
import variables from '@site/calico_versioned_docs/version-3.27/variables';
import CodeBlock from '@theme/CodeBlock';

Entity rules specify the attributes of the source or destination of a packet that must match for the rule as a whole
to match. Packets can be matched on combinations of:

- Identity of the source/destination, by using [Selectors](#selectors) or by specifying a particular
  Kubernetes `Service`. Selectors can match [workload endpoints](../../reference/resources/workloadendpoint.mdx),
  [host endpoints](../../reference/resources/hostendpoint.mdx) and ([namespaced](../../reference/resources/networkset.mdx) or
  [global](../../reference/resources/globalnetworkset.mdx)) network sets.
- Source/destination IP address, protocol and port.

If the rule contains multiple match criteria (for example, an IP and a port) then all match criteria must match
for the rule as a whole to match a packet.

| Field             | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | Accepted Values                                                                                           | Schema                                      | Default |
| ----------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------- | ------------------------------------------- | ------- |
| nets              | Match packets with IP in any of the listed CIDRs.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           | List of valid IPv4 CIDRs or list of valid IPv6 CIDRs (IPv4 and IPv6 CIDRs shouldn't be mixed in one rule) | list of cidrs                               |
| notNets           | Negative match on CIDRs. Match packets with IP not in any of the listed CIDRs.                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | List of valid IPv4 CIDRs or list of valid IPv6 CIDRs (IPv4 and IPv6 CIDRs shouldn't be mixed in one rule) | list of cidrs                               |
| selector          | Positive match on selected endpoints. If a `namespaceSelector` is also defined, the set of endpoints this applies to is limited to the endpoints in the selected namespaces.                                                                                                                                                                                                                                                                                                                                                                                | Valid selector                                                                                            | [selector](#selectors)                      |         |
| notSelector       | Negative match on selected endpoints. If a `namespaceSelector` is also defined, the set of endpoints this applies to is limited to the endpoints in the selected namespaces.                                                                                                                                                                                                                                                                                                                                                                                | Valid selector                                                                                            | [selector](#selectors)                      |         |
| namespaceSelector | Positive match on selected namespaces. If specified, only workload endpoints in the selected Kubernetes namespaces are matched. Matches namespaces based on the labels that have been applied to the namespaces. Defines the scope that selectors will apply to, if not defined then selectors apply to the NetworkPolicy's namespace. Match a specific namespace by name using the `projectcalico.org/name` label. Select the non-namespaced resources like GlobalNetworkSet(s), host endpoints to which this policy applies by using `global()` selector. | Valid selector                                                                                            | [selector](#selectors)                      |         |
| ports             | Positive match on the specified ports                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |                                                                                                           | list of [ports](#ports)                     |         |
| notPorts          | Negative match on the specified ports                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |                                                                                                           | list of [ports](#ports)                     |         |
| serviceAccounts   | Match endpoints running under service accounts. If a `namespaceSelector` is also defined, the set of service accounts this applies to is limited to the service accounts in the selected namespaces.                                                                                                                                                                                                                                                                                                                                                        |                                                                                                           | [ServiceAccountMatch](#serviceaccountmatch) |         |
| services          | Match the specified service(s). If specified on egress rule destinations, no other selection criteria can be set. If specified on ingress rule sources, only positive or negative matches on ports can be specified.                                                                                                                                                                                                                                                                                                                                        |                                                                                                           | [ServiceMatch](#servicematch)               |         |

When using selectors in network policy, remember that selectors only match (known) resources, but _rules_ match
packets. A rule with a selector `all()` won't match "all packets", it will match "packets from all in-scope
endpoints and network sets". To match all packets, do not include a selector in the rule at all.

#### Understanding `notSelector`

`notSelector` is somewhat subtle because the `not` in `notSelector` negates the packet match
rather than the selector:

- `selector: !has(foo)` matches packets from/to endpoints and network sets that do not have the label "foo".
- `notSelector: has(foo)` matches packets from/to **anywhere** (including outside the cluster), **except** traffic from/to endpoints and network sets that have the label "foo".

#### Selector performance in EntityRules

When rendering policy into the dataplane, {variables.prodname} must identify the endpoints that match the selectors
in all active rules.  This calculation is optimized for certain common selector types.
Using the optimized selector types reduces CPU usage (and policy rendering time) by orders of magnitude.
This becomes important at high scale (hundreds of active rules, hundreds of thousands of endpoints).

The optimized operators are as follows:

- `label == "value"`
- `label in { 'v1', 'v2' }`
- `has(label)`
- `<expression 1> && <expression 2>` is optimized if **either** `<expression 1>` or `<expression 2>` is
  optimized.

The following perform like `has(label)`.  All endpoints with the label will be scanned to find matches:

- `label contains 's'`
- `label starts with 's'`
- `label ends with 's'`

The other operators, and in particular, `all()`, `!`, `||` and `!=` are not optimized.

Examples:

- `a == 'b'` - optimized
- `a == 'b' && has(c)` - optimized
- `a == 'b' || has(c)` - **not** optimized due to use of `||`
- `c != 'd'` - **not** optimized due to use of `!=`
- `!has(a)` - **not** optimized due to use of `!`
- `a == 'b' && c != 'd'` - optimized, `a =='b'` is optimized so `a == 'b' && <anything>` is optimized.
- `c != 'd' && a == 'b'` - optimized, `a =='b'` is optimized so `<anything> && a == 'b'` is optimized.
